register service worker; edit manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Penguin Phoenix Portfolio",
 	"icons": [
 		{
-			"src": "/assets/images/skull1192.jpg",
+			"src": "/assets/images/skull192.jpg",
 			"type": "image/jpg",
 			"sizes": "192x192"
 		},
