--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,12 @@
 	"icons": [
 		{
 			"src": "/assets/images/skull192.png",
-			"type": "image/jpg",
+			"type": "image/png",
 			"sizes": "192x192"
 		},
 		{
 			"src": "/assets/images/skull512.png",
-			"type": "image/jpg",
+			"type": "image/png",
 			"sizes": "512x512"
 		}
 	],
